--- a/experiment2/index.html
+++ b/experiment2/index.html
@@ -33,18 +33,21 @@
 				<h2>Imitate</h2>
 				<p>To develop artistic creativity in coding, it can be helpful to start by studying and learning from existing examples. This might involve reviewing code written by others, analyzing successful techniques, or even copying and modifying code to better understand how it works. By imitating and learning from existing techniques and strategies, we can gain a better understanding of what has been done before and what is possible, and identify opportunities for improvement and innovation.</p>
 				<p>What code did you start with? (You don't need to provide the code itself, but where did you start?) Document this step briefly.</p>
+				<p>I started with the code from this sketch http://www.generative-gestaltung.de/2/sketches/?01_P/P_2_2_3_01. I looked at it and thought I really liked the generative line shapes overall. I then moved to this one http://www.generative-gestaltung.de/2/sketches/?01_P/P_2_0_02. I thought it was a better base for me to start with since it was much simpler to work with. I did play around with both a bit, but I liked the second one better as a start.</p>
 			</div>
 
 			<div class="minor-section">
 				<h2>Integrate</h2>
 				<p>After learning from existing techniques and strategies, we can build upon that foundation by combining elements from different sources. This might involve combining elements from different programming languages, using libraries or frameworks in new ways, or bringing together techniques from different fields or disciplines. By integrating and combining elements from different sources, we can create something new and unique.</p>
 				<p>How did you extend the code or combine with another technique to make something new? Document this step.</p>
+				<p>I decided to make it more similar to the first example I used and made the shapes follow the mouse. Then I randomized the colors and opacity to make the shapes a bit mor interesting. I also tried using the sin functions I saw from earlier examples to make shapes change in size that go up and down.</p>
 			</div>
 
 			<div class="minor-section">
 				<h2>Innovate</h2>
 				<p>Finally, we can introduce new or original ideas to our coding process by thinking creatively and pushing the boundaries. This might involve developing entirely new techniques or approaches, or using existing techniques in new and creative ways. By innovating and introducing new ideas, we can create art that is truly groundbreaking.</p>
 				<p>How did you use the code as a jumping off point to create something truly unique and novel? Document this step thoroughly.</p>
+				<p>At this point I tried many things like randomizing the shape placement and making the framecount determine size and shape. Then I realized I really liked the triangles. So I made it only create triangles. Then I like the oscillating idea so I put the shape creation back in the center and made the size oscillate. I then tried rotating the triangles with a sin function as well which made a cool visual effect. Finally I mixed it up by switching a sin function with a cos one instead to make them the rotations and size desync. So then it made an even cooler visual effect.</p>
 			</div>
 
 			<div class="minor-section">
@@ -55,6 +58,7 @@
 					<li>A reflection on your work and the work of the team</li>
 					<li>Brief highs and lows</li>
 				</ul>
+				<p>Well I did the whole thing and I think it ended pretty ok overall. Looks nice and feels cool. Only things I don't like is that it felt kinda mid. I couldn't think of something more creative which kind of sucked. Wish I could have figured out something more.</p>
 			</div>
 
 			<div class="minor-section">
