--- a/experiment2/index.html
+++ b/experiment2/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Experiment X - Subject/Topic</title>
+	<title>Experiment 2 - Vector Art, Animation & Interactivity</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
 	<meta charset="UTF-8" />
@@ -40,7 +40,7 @@
 				<h2>Integrate</h2>
 				<p>After learning from existing techniques and strategies, we can build upon that foundation by combining elements from different sources. This might involve combining elements from different programming languages, using libraries or frameworks in new ways, or bringing together techniques from different fields or disciplines. By integrating and combining elements from different sources, we can create something new and unique.</p>
 				<p>How did you extend the code or combine with another technique to make something new? Document this step.</p>
-				<p>I decided to make it more similar to the first example I used and made the shapes follow the mouse. Then I randomized the colors and opacity to make the shapes a bit mor interesting. I also tried using the sin functions I saw from earlier examples to make shapes change in size that go up and down.</p>
+				<p>I decided to make it more similar to the first example I used and made the shapes follow the mouse. Then I randomized the colors and opacity to make the shapes a bit mor interesting. I also tried using the sin functions I saw from earlier examples to make shapes change in size that go up and down. I also attempted changing the size of the shapes based on mouse position with a bit of randomization with it. Didn't really look that good to me though.</p>
 			</div>
 
 			<div class="minor-section">
