Bruh just made the exp3 thing idk

--- a/experiment3/index.html
+++ b/experiment3/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Experiment X - Subject/Topic</title>
+	<title>Experiment 3 - Generative Methods</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
 	<meta charset="UTF-8" />
@@ -33,18 +33,21 @@
 				<h2>Imitate</h2>
 				<p>To develop artistic creativity in coding, it can be helpful to start by studying and learning from existing examples. This might involve reviewing code written by others, analyzing successful techniques, or even copying and modifying code to better understand how it works. By imitating and learning from existing techniques and strategies, we can gain a better understanding of what has been done before and what is possible, and identify opportunities for improvement and innovation.</p>
 				<p>What code did you start with? (You don't need to provide the code itself, but where did you start?) Document this step briefly.</p>
+				<p>I started with the code from this link http://www.generative-gestaltung.de/2/sketches/?01_P/P_2_2_4_01. I looked at a different sketch before, but I feel like it wasn't something I could easily modify. I did modify that one a bit to change colors and noise. So I just started with the other one because I wanted to work with generative circles to make something.</p>
 			</div>
 
 			<div class="minor-section">
 				<h2>Integrate</h2>
 				<p>After learning from existing techniques and strategies, we can build upon that foundation by combining elements from different sources. This might involve combining elements from different programming languages, using libraries or frameworks in new ways, or bringing together techniques from different fields or disciplines. By integrating and combining elements from different sources, we can create something new and unique.</p>
 				<p>How did you extend the code or combine with another technique to make something new? Document this step.</p>
+				<p>I changed the dot tree to grow forever to fill up more of the screen. Then I tried replacing the circles with triangles. It was ok, but not that interesting. I tried messing with the mapping functions and effectively made a noise line of shapes. After that I tried mapping everything into a pixel like image, but with triangles. Then I went back to circles to give more of a dot art feel.</p>
 			</div>
 
 			<div class="minor-section">
 				<h2>Innovate</h2>
 				<p>Finally, we can introduce new or original ideas to our coding process by thinking creatively and pushing the boundaries. This might involve developing entirely new techniques or approaches, or using existing techniques in new and creative ways. By innovating and introducing new ideas, we can create art that is truly groundbreaking.</p>
 				<p>How did you use the code as a jumping off point to create something truly unique and novel? Document this step thoroughly.</p>
+				<p>I first tried using noise to randomize the colors, but it didn't go well since the way the code works is redrawing every circle to make a new one. So the color would be the same for all of them. I then changed it to be random noise functions based on frame count to be the colors. That was a bit more interesting and made pretty decent patterns. The multipliers for the noise was also based on some complementary RGB colors. Finally I decided to make it so once the canvas is full it would make a start going over it with a new pattern. This way it can continue making unique scenes over and over.</p>
 			</div>
 
 			<div class="minor-section">
@@ -55,6 +58,7 @@
 					<li>A reflection on your work and the work of the team</li>
 					<li>Brief highs and lows</li>
 				</ul>
+				<p>I made the whole project so I guess I contributed by making it. I think my work was alright. It is interesting, but it could be better. Yet I can't figure out what I could do to improve it. I think the lows were probably just realizing that using noise would be kinda difficult to make interesting and just trying to use triangles. That didn't work so well. The high was most certainly making the thing loop and paint over the dots. It makes an interesting loading sort of animation.</p>
 			</div>
 
 			<div class="minor-section">
