--- a/experiment4/index.html
+++ b/experiment4/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Experiment X - Subject/Topic</title>
+	<title>Experiment 4 - Images, Video, & Sound Art</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
 	<meta charset="UTF-8" />
@@ -28,23 +28,26 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/experiment.css -->
 	<main id="content">
 		<section>
-			<h1>Experiment X - Subject/Topic</h1>
+			<h1>Experiment 4 - Images, Video, & Sound Art</h1>
 			<div class="minor-section">
 				<h2>Imitate</h2>
 				<p>To develop artistic creativity in coding, it can be helpful to start by studying and learning from existing examples. This might involve reviewing code written by others, analyzing successful techniques, or even copying and modifying code to better understand how it works. By imitating and learning from existing techniques and strategies, we can gain a better understanding of what has been done before and what is possible, and identify opportunities for improvement and innovation.</p>
 				<p>What code did you start with? (You don't need to provide the code itself, but where did you start?) Document this step briefly.</p>
+				<p>I started with the code from this https://openprocessing.org/sketch/1800102 and this https://openprocessing.org/sketch/611472. I messed around with the first sketch to make it visually more appealing and changed the sound a bit. The second sketch I didn't touch much because it was hard to do anything since I didn't understand the code. I at most changed the ball size.</p>
 			</div>
 
 			<div class="minor-section">
 				<h2>Integrate</h2>
 				<p>After learning from existing techniques and strategies, we can build upon that foundation by combining elements from different sources. This might involve combining elements from different programming languages, using libraries or frameworks in new ways, or bringing together techniques from different fields or disciplines. By integrating and combining elements from different sources, we can create something new and unique.</p>
 				<p>How did you extend the code or combine with another technique to make something new? Document this step.</p>
+				<p>I first went through the documentation to change the sound to make it feel a bit better overall to listen to. Then I made it so the sound went from left to right in the headphones based on mouse position. I found out how to do that through the documentation as well.</p>
 			</div>
 
 			<div class="minor-section">
 				<h2>Innovate</h2>
 				<p>Finally, we can introduce new or original ideas to our coding process by thinking creatively and pushing the boundaries. This might involve developing entirely new techniques or approaches, or using existing techniques in new and creative ways. By innovating and introducing new ideas, we can create art that is truly groundbreaking.</p>
 				<p>How did you use the code as a jumping off point to create something truly unique and novel? Document this step thoroughly.</p>
+				<p>I tried to make the sound change based off of key inputs. That kind of broke the sound and made it stop working entirely though. So it was a wasted endeavor. Then I tried to make the volume scale based on mouse position, but once again it came up with an error. I tried an assortment of other things that just got more errors later too. I finally got something to work and made an echo scale based on mouse position. That seemed to work and at this point I had worked on this for far too long so I called it. I still think it is a pleasing sketch though.</p>
 			</div>
 
 			<div class="minor-section">
@@ -55,6 +58,7 @@
 					<li>A reflection on your work and the work of the team</li>
 					<li>Brief highs and lows</li>
 				</ul>
+				<p>I made the whole project. I think the project is at the very least much better than the original thing I started from. It looks better the sound is sort of better at least to me and the way the sound changes based on the mouse position is cool too. Wish I could make a better sound though with oscillation. It just doesn't sound all that good. High point for me was getting the sound to move from left to right because that was pretty cool to me. Felt very satisfying to implement. The big low was trying to innovate the sound and just getting error after error.</p>
 			</div>
 
 			<div class="minor-section">
