--- a/experiment4/index.html
+++ b/experiment4/index.html
@@ -60,7 +60,7 @@
 					<li>A reflection on your work and the work of the team</li>
 					<li>Brief highs and lows</li>
 				</ul>
-				<p>I made the whole project. I think the project is at the very least much better than the original thing I started from. It looks better the sound is sort of better at least to me and the way the sound changes based on the mouse position is cool too. Wish I could make a better sound though with oscillation. It just doesn't sound all that good. High point for me was getting the sound to move from left to right because that was pretty cool to me. Felt very satisfying to implement. The big low was trying to innovate the sound and just getting error after error.</p>
+				<p>I did the whole project. I think the project is at the very least much better than the original thing I started from. It looks better the sound is sort of better at least to me and the way the sound changes based on the mouse position is cool too. Wish I could make a better sound though with oscillation. It just doesn't sound all that good. High point for me was getting the sound to move from left to right because that was pretty cool to me. Felt very satisfying to implement. The big low was trying to innovate the sound and just getting error after error.</p>
 			</div>
 
 			<div class="minor-section">
