--- a/experiment5/index.html
+++ b/experiment5/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Experiment X - Subject/Topic</title>
+	<title>Experiment 5 - 3D Graphics</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
 	<meta charset="UTF-8" />
@@ -28,23 +28,26 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/experiment.css -->
 	<main id="content">
 		<section>
-			<h1>Experiment X - Subject/Topic</h1>
+			<h1>Experiment 5 - 3D Graphics</h1>
 			<div class="minor-section">
 				<h2>Imitate</h2>
 				<p>To develop artistic creativity in coding, it can be helpful to start by studying and learning from existing examples. This might involve reviewing code written by others, analyzing successful techniques, or even copying and modifying code to better understand how it works. By imitating and learning from existing techniques and strategies, we can gain a better understanding of what has been done before and what is possible, and identify opportunities for improvement and innovation.</p>
 				<p>What code did you start with? (You don't need to provide the code itself, but where did you start?) Document this step briefly.</p>
+				<p>I started my experiment by using the tutorial given to us in the slides. Specifically this site https://openprocessing.org/sketch/794227. After that I went onto open processing and found a cool project to mess around with. Here is the link to it https://openprocessing.org/sketch/2065811. I messed with it a bit changing the colors and shapes around. As well as trying to change the equations a bit.</p>
 			</div>
 
 			<div class="minor-section">
 				<h2>Integrate</h2>
 				<p>After learning from existing techniques and strategies, we can build upon that foundation by combining elements from different sources. This might involve combining elements from different programming languages, using libraries or frameworks in new ways, or bringing together techniques from different fields or disciplines. By integrating and combining elements from different sources, we can create something new and unique.</p>
 				<p>How did you extend the code or combine with another technique to make something new? Document this step.</p>
+				<p>I then tried using new functions from the reference to change the sketch. I tried translating the cubes which made a weird shape. After I decided to scale the cubes down in size and got a sort of ring. Then I tried adding more rings and changed the translations to make something. It ended up kind of weird and not like I expected. I then figured out how to make more similar rings to create a sort of shape made of rings.</p>
 			</div>
 
 			<div class="minor-section">
 				<h2>Innovate</h2>
 				<p>Finally, we can introduce new or original ideas to our coding process by thinking creatively and pushing the boundaries. This might involve developing entirely new techniques or approaches, or using existing techniques in new and creative ways. By innovating and introducing new ideas, we can create art that is truly groundbreaking.</p>
 				<p>How did you use the code as a jumping off point to create something truly unique and novel? Document this step thoroughly.</p>
+				<p>I then discovered I could move the rotate functions order to create a sort of sphere of rings. So I then changed then translate function to random. That made a sort of sphere with circle planes. It looked pretty cool overall. I then changed the size of the cubes a couple of times to see what worked the best to me. I also tried limiting the random to ranges to make a more defined ring like Saturn, but I wasn't a huge fan. So then I went back to fully randomized with small cubes to make a sort of universe looking thing.</p>
 			</div>
 
 			<div class="minor-section">
@@ -55,6 +58,7 @@
 					<li>A reflection on your work and the work of the team</li>
 					<li>Brief highs and lows</li>
 				</ul>
+				<p>I made the entire code myself. I think that overall I did a pretty good job making something new working off of the original work. It seems unique and pretty cool overall. It might not be perfect or the most complicated, but I like it. The high was getting the universe effect with the randomization of the translation. The low was trying to figure out how to create a sphere with the rotation functions. I really didn't think that changing the order of the functions would do that. </p>
 			</div>
 
 			<div class="minor-section">
