--- a/experiment6/index.html
+++ b/experiment6/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Experiment X - Subject/Topic</title>
+	<title>Experiment 6 - Grammars & Text Art</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
 	<meta charset="UTF-8" />
@@ -28,23 +28,26 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/experiment.css -->
 	<main id="content">
 		<section>
-			<h1>Experiment X - Subject/Topic</h1>
+			<h1>Experiment 6 - Grammars & Text Art</h1>
 			<div class="minor-section">
 				<h2>Imitate</h2>
 				<p>To develop artistic creativity in coding, it can be helpful to start by studying and learning from existing examples. This might involve reviewing code written by others, analyzing successful techniques, or even copying and modifying code to better understand how it works. By imitating and learning from existing techniques and strategies, we can gain a better understanding of what has been done before and what is possible, and identify opportunities for improvement and innovation.</p>
 				<p>What code did you start with? (You don't need to provide the code itself, but where did you start?) Document this step briefly.</p>
+				<p>I started with the code from the Generative Design site. Here is the link http://www.generative-gestaltung.de/2/sketches/?01_P/P_3_0_01. I first changed the font and made the background function. It wasn't working properly when I ran it in p5. I then changed the background update opacity to make it look cooler. I changed the text to follow the mouse x coordinates and adjusted the size scaling based on the mouse x coordinates. Then I changed the size equation to one with an absolute value function as it was more interesting.</p>
 			</div>
 
 			<div class="minor-section">
 				<h2>Integrate</h2>
 				<p>After learning from existing techniques and strategies, we can build upon that foundation by combining elements from different sources. This might involve combining elements from different programming languages, using libraries or frameworks in new ways, or bringing together techniques from different fields or disciplines. By integrating and combining elements from different sources, we can create something new and unique.</p>
 				<p>How did you extend the code or combine with another technique to make something new? Document this step.</p>
+				<p>After that I tried using a rotate function to make the text have a more unique look for the sketch. I had to play around with it a bit before I got something good. I then inverted the color scheme because it was more friendly on the eyes and generally I liked it better.</p>
 			</div>
 
 			<div class="minor-section">
 				<h2>Innovate</h2>
 				<p>Finally, we can introduce new or original ideas to our coding process by thinking creatively and pushing the boundaries. This might involve developing entirely new techniques or approaches, or using existing techniques in new and creative ways. By innovating and introducing new ideas, we can create art that is truly groundbreaking.</p>
 				<p>How did you use the code as a jumping off point to create something truly unique and novel? Document this step thoroughly.</p>
+				<p>I decided to make a circle of letters constantly appear and the size was still based on the mouse position. It was pretty cool and I wanted to make it grow/shrink constantly. However I was unable to create an equation to do that so I eventually gave up. Then I tried making intersecting lines as well which seemed pretty cool overall. Then I got rid of the rotation due to the fact that it made the lines and circle look weird.</p>
 			</div>
 
 			<div class="minor-section">
@@ -55,6 +58,7 @@
 					<li>A reflection on your work and the work of the team</li>
 					<li>Brief highs and lows</li>
 				</ul>
+				<p>I made the whole project. I think the work was pretty good it feels unique, but I really don't know if it's where I want it to be. Once again I'm clueless as how to improve it more. Maybe something like fake 3d would have been cool. Though I don't know how to do that well. The high of the project was being able to create the circle function properly. That was kinda hard since I'm bad at making good code and equations. The low was probably getting rid of the rotation function. I wanted to keep it, but it really threw off the whole thing I was going for so I had to give it up.</p>
 			</div>
 
 			<div class="minor-section">
